src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AA_Second_Effective_Date__c</fullName>
        <label>AA Second Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AA_Second_Execution_Date__c</fullName>
        <label>AA Second Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AA_Third_Effective_Date__c</fullName>
        <label>AA Third Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AA_Third_Execution_Date__c</fullName>
        <label>AA Third Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accounts__c</fullName>
        <description>Power of One</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Code__c</fullName>
        <label>Activity Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Common_Family_Languages_at_Practice__c</fullName>
        <label>Common Family Languages at Practice</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Chinese (Cantonese)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Mandarin)</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>French Creole</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Persian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Community_Type__c</fullName>
        <label>Community Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Urban</fullName>
                </value>
                <value>
                    <fullName>Suburban</fullName>
                </value>
                <value>
                    <fullName>Rural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Data_Collection_Systems__c</fullName>
        <description>What type of data collection and/or tracking system will your practice use to document and report HealthySteps services, HealthySteps patient demographics, and financial information</description>
        <inlineHelpText>What type of data collection and/or tracking system will your practice use to document and report HealthySteps services, HealthySteps patient demographics, and financial information</inlineHelpText>
        <label>Data Collection Systems</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMR</fullName>
                </value>
                <value>
                    <fullName>Microsoft Excel</fullName>
                </value>
                <value>
                    <fullName>Microsoft Access</fullName>
                </value>
                <value>
                    <fullName>Efforts to Outcomes</fullName>
                </value>
                <value>
                    <fullName>Program Information Management System</fullName>
                </value>
                <value>
                    <fullName>Funder data system</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Date_Affiliate_Agreement_Signed__c</fullName>
        <inlineHelpText>Date Affiliate Agreement signed</inlineHelpText>
        <label>AA First Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C4G_Date_Readiness_Assessment_Sent__c</fullName>
        <description>Automatically populates with Date that the Email Message: Complete Your Practice Assessment was sent.</description>
        <inlineHelpText>Automatically populates with Date that the Email Message: Complete Your Practice Assessment was sent.</inlineHelpText>
        <label>Practice Assessment Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C4G_Date_Trademark_Agreement__c</fullName>
        <inlineHelpText>Date Trademark License Agreement effective</inlineHelpText>
        <label>TLA Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C4G_Designations_Accreditations__c</fullName>
        <label>Designations/Accreditations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accountable Care Organization (ACO)</fullName>
                </value>
                <value>
                    <fullName>Federally Qualified Health Center (FQHC)</fullName>
                </value>
                <value>
                    <fullName>Patient Centered Medical Home (PCMH)</fullName>
                </value>
                <value>
                    <fullName>NCQA Certification</fullName>
                </value>
                <value>
                    <fullName>Pediatric Accountable Care Organization (PACO)</fullName>
                </value>
                <value>
                    <fullName>Rural Health Clinic (RHC)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Electric_Medical_Record_System__c</fullName>
        <label>Electric Medical Record System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allscripts</fullName>
                </value>
                <value>
                    <fullName>Athena</fullName>
                </value>
                <value>
                    <fullName>Care360</fullName>
                </value>
                <value>
                    <fullName>eClinicalWorks</fullName>
                </value>
                <value>
                    <fullName>Epic</fullName>
                </value>
                <value>
                    <fullName>McKesson</fullName>
                </value>
                <value>
                    <fullName>Other EMR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Foundation_Funders__c</fullName>
        <label>Foundation Funders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Funding_Sources__c</fullName>
        <label>Funding Sources for HealthySteps</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tobacco settlement funds</fullName>
                </value>
                <value>
                    <fullName>Tobacco tax funds</fullName>
                </value>
                <value>
                    <fullName>Project LAUNCH (Linking Actions for Unmet Needs in Children’s Health)</fullName>
                </value>
                <value>
                    <fullName>GME/Residency training funds</fullName>
                </value>
                <value>
                    <fullName>Indian Health Service (IHS)</fullName>
                </value>
                <value>
                    <fullName>Health system, hospital or pediatric department funds (including health system reinvestment)</fullName>
                </value>
                <value>
                    <fullName>Philanthropic and foundation funding</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
                <value>
                    <fullName>Department of Defense</fullName>
                </value>
                <value>
                    <fullName>Other state funds</fullName>
                </value>
                <value>
                    <fullName>Other federal funds</fullName>
                </value>
                <value>
                    <fullName>Other non-state/federal funds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Grant_Funders__c</fullName>
        <label>Grant Funders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_HealthySteps_Institute_Training_Date__c</fullName>
        <description>This field will be automatically populated by the Training Date on the Training record associated to the account.</description>
        <inlineHelpText>This field will be automatically populated by the Training Date on the Training record associated to the account.</inlineHelpText>
        <label>HealthySteps Institute Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C4G_Implementation_Start_Date__c</fullName>
        <label>Implementation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C4G_Length_of_current_funding__c</fullName>
        <label>Length of Current Funding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 – 6 months</fullName>
                </value>
                <value>
                    <fullName>6 – 12 months</fullName>
                </value>
                <value>
                    <fullName>1 – 2 years</fullName>
                </value>
                <value>
                    <fullName>2 – 3 years</fullName>
                </value>
                <value>
                    <fullName>More than 3 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_MIECHV_Programs_Offered__c</fullName>
        <label>MIECHV Programs Offered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment and Biobehavioral Catch-Up (ABC) Intervention</fullName>
                </value>
                <value>
                    <fullName>Child First</fullName>
                </value>
                <value>
                    <fullName>Healthy Families America</fullName>
                </value>
                <value>
                    <fullName>Family Connects</fullName>
                </value>
                <value>
                    <fullName>Healthy Beginnings</fullName>
                </value>
                <value>
                    <fullName>Minding the Baby</fullName>
                </value>
                <value>
                    <fullName>Nurse-Family Partnership</fullName>
                </value>
                <value>
                    <fullName>Parents As Teachers</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Nurse_Practitioner_Count__c</fullName>
        <label>Nurse Practitioner Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C4G_Offers_MIECHV_Enrollment_Referrals__c</fullName>
        <label>Offers MIECHV Enrollment/Referrals</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Onsite_Support__c</fullName>
        <label>Onsite Support</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prenatal services</fullName>
                </value>
                <value>
                    <fullName>Lactation education and/or counseling</fullName>
                </value>
                <value>
                    <fullName>Mental health services</fullName>
                </value>
                <value>
                    <fullName>Nutrition consultant</fullName>
                </value>
                <value>
                    <fullName>Health educator/community health worker</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Other_Common_Family_Languages__c</fullName>
        <label>Other Common Family Languages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C4G_Other_Data_Collection_Systems__c</fullName>
        <label>Other Data Collection Systems</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Other_Designations_Accreditations__c</fullName>
        <label>Other Designations/Accreditations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Other_EMR__c</fullName>
        <label>Other EMR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Other_Formal_Program_Partnerships__c</fullName>
        <label>Other Formal Program Partnerships</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Other_Onsite_Supports__c</fullName>
        <label>Other Onsite Supports</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Other_Reimbursement_Sources__c</fullName>
        <label>Other Reimbursement Sources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Physician_Assistant_Count__c</fullName>
        <label>Physician Assistant Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C4G_Physician_Count__c</fullName>
        <label>Physician Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C4G_Practice_Part_of_Network__c</fullName>
        <description>Is your practice part of a health system, medical center, or larger network?</description>
        <inlineHelpText>Is your practice part of a health system, medical center, or larger network?</inlineHelpText>
        <label>Practice Part of Network</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Practice_Trains_Residents__c</fullName>
        <label>Practice Trains Residents</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Private_Meeting_Space_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Meeting Space Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C4G_Program_Formal_Partnerships__c</fullName>
        <label>Program Formal Partnerships</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Help Me Grow (HMG)</fullName>
                </value>
                <value>
                    <fullName>Circle of Security</fullName>
                </value>
                <value>
                    <fullName>Positive Parenting Program (Triple P)</fullName>
                </value>
                <value>
                    <fullName>Reach Out and Read (ROR)</fullName>
                </value>
                <value>
                    <fullName>Video Interaction Project (VIP)</fullName>
                </value>
                <value>
                    <fullName>Linking Actions for Unmet Needs in Children’s Health (Project LAUNCH)</fullName>
                </value>
                <value>
                    <fullName>Centering Pregnancy/Centering Parenting</fullName>
                </value>
                <value>
                    <fullName>Medical-Legal Partnership</fullName>
                </value>
                <value>
                    <fullName>National Pediatric Practice Community on Adverse Childhood Experiences (NPPC)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_ReadinessAssessmentCompleted__c</fullName>
        <description>Automatically populates with Date that the FormAssembly form: HealthySteps Readiness Assessment is completed online.</description>
        <inlineHelpText>Automatically populates with Date that the FormAssembly form: HealthySteps Readiness Assessment is completed online.</inlineHelpText>
        <label>Practice Assessment Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C4G_Reimbursement_Sources__c</fullName>
        <description>Please indicate from which sources your practice receives reimbursement for HealthySteps services.</description>
        <inlineHelpText>Please indicate from which sources your practice receives reimbursement for HealthySteps services.</inlineHelpText>
        <label>Reimbursement Sources</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medicaid or the Children’s Health Insurance Program (CHIP)</fullName>
                </value>
                <value>
                    <fullName>TRICARE</fullName>
                </value>
                <value>
                    <fullName>Commercial/private insurance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None of the above – our practice does not currently receive reimbursement for HealthySteps services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Site_ID__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Account ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>C4G_Status__c</fullName>
        <description>The Site's current status with the HealthySteps program.</description>
        <inlineHelpText>The Site's current status with the HealthySteps program.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interested</fullName>
                </value>
                <value>
                    <fullName>Exploration</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                    <label>Not moving forward</label>
                </value>
                <value>
                    <fullName>N/A (Not a HS Site)</fullName>
                </value>
                <value>
                    <fullName>Offboarding</fullName>
                </value>
                <value>
                    <fullName>Prospective</fullName>
                    <isActive>false</isActive>
                    <label>Prospective</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C4G_Training_Contract_Signed__c</fullName>
        <label>HSI Training Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFG_Number_of_Gifts_Last_FY__c</fullName>
        <description>This is for a customizable roll-up field</description>
        <label>Number of Gifts Last FY</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFG_Number_of_Gifts_This_FY__c</fullName>
        <description>This is for a customizable roll up</description>
        <label>Number of Gifts This FY</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFG_Number_of_Gifts_Two_FY_Ago__c</fullName>
        <description>This is for a customizable roll up</description>
        <label>Number of Gifts Two FY Ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFG_Total_Gifts_Last_FY__c</fullName>
        <description>This is for a customizable roll-up</description>
        <label>Total Gifts Last FY</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFG_Total_Gifts_This_FY__c</fullName>
        <description>This is for a customizable roll-up field.</description>
        <label>Total Gifts This FY</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFG_Total_Gifts_Two_FY_Ago__c</fullName>
        <description>This is for a customizable roll-up</description>
        <label>Total Gifts Two FY Ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CFG_Trainer1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFG_Trainer2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFG_Trainer3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Care2_Databridge_Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Care2 Databridge Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Company_Category__c</fullName>
        <label>Company Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Educational Institution/Student</fullName>
                </value>
                <value>
                    <fullName>Electronic Manufacturing System</fullName>
                </value>
                <value>
                    <fullName>Equipment/Materials</fullName>
                </value>
                <value>
                    <fullName>Fabless</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Integrated Device Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Industry Analyst/Publication</fullName>
                </value>
                <value>
                    <fullName>Investment/Venture Capital</fullName>
                </value>
                <value>
                    <fullName>Original Equipment Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Organization/Association</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Service Partner</fullName>
                </value>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_Online_Interest_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed Online Interest Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Case_ID__c</fullName>
        <formula>npe01__One2OneContact__r.c4g_Contact_CaseSafe_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact CaseSafe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_from_Person_to_Household_Acct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to track the Person accounts converted to Household accounts as part of the ticket #7616</description>
        <label>Converted from Person to Household Acct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateFirstSiteProfileCompleted__c</fullName>
        <label>Initial Site Profile Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateMostRecentASRCompleted__c</fullName>
        <label>ASR Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateMostRecentImplementationPlanSent__c</fullName>
        <label>Most Recent Implementation Plan Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateMostRecentSiteProfileSent__c</fullName>
        <label>Site Profile Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_HSI_Contract_Sent__c</fullName>
        <description>Please refer to JIRA (PPS-109) for the requirement - This field will be manually entered by the PMDS team</description>
        <label>Date HSI Contract Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deactivation_Date__c</fullName>
        <description>Please refer to JIRA (PPS-109) for the requirement - This field will be manually entered by the PMDS team</description>
        <label>Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_site_profile_reminder_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email site profile reminder sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FON_Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_AA_Amended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>https://zerotothree.atlassian.net/browse/PPS-123</description>
        <label>First AA Amended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupID2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group ID 2</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Accounts (Group ID 2)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GroupID3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group ID 3</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Accounts (Group ID 3)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GroupID4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group ID 4</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Accounts (Group ID 4)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HS_Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>HS Import ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IM_S_D__c</fullName>
        <formula>CASE ( 
MOD( C4G_HealthySteps_Institute_Training_Date__c - DATE( 1900, 1, 7 ), 7 ), 
3, C4G_HealthySteps_Institute_Training_Date__c + 2 + (cfg_Number_of_Training_Days__c), 
4, C4G_HealthySteps_Institute_Training_Date__c + 2 + (cfg_Number_of_Training_Days__c), 
5, C4G_HealthySteps_Institute_Training_Date__c + 2 + (cfg_Number_of_Training_Days__c), 
6, C4G_HealthySteps_Institute_Training_Date__c + 1 + (cfg_Number_of_Training_Days__c), 
C4G_HealthySteps_Institute_Training_Date__c + (cfg_Number_of_Training_Days__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IM_S_D</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Plan_Completed__c</fullName>
        <label>Implementation Plan Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Plan_Merge__c</fullName>
        <formula>"&amp;Id=" + Id +
"&amp;QueryId=[PlanLead]a0uf400000FE1n5,[PhysicianChampion]a0uf400000FE1n0,[TeamMembers]a0uf400000FE1mw" +
"&amp;TemplateId=a12f4000005wZ1j" +
"&amp;SC0=1" +
"&amp;SC1=Attachments" +
"&amp;DS7=13" +
"&amp;OFN=HealthySteps+Implementation+Plan+-+" + Name + "+-+" + TEXT(cfg_Plan_Type__c)</formula>
        <label>Implementation Plan Merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Plan_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implementation Plan Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Site_Profile_Length_of_Funding__c</fullName>
        <label>Initial Site Profile Length of Funding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 – 6 months</fullName>
                </value>
                <value>
                    <fullName>6 – 12 months</fullName>
                </value>
                <value>
                    <fullName>1 – 2 years</fullName>
                </value>
                <value>
                    <fullName>2 – 3 years</fullName>
                </value>
                <value>
                    <fullName>More than 3 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Site_Profile_Merge__c</fullName>
        <formula>"&amp;Id=" + Id +
"&amp;QueryId=[SiteProfile]a0uf400000FE1mv" +
"&amp;TemplateId=a12f4000005wZ1U"+
"&amp;DefaultPDF=1" +
"&amp;SC0=1" +
"&amp;SC1=Attachments" +
"&amp;DS7=13" +
"&amp;OFN=HealthySteps+Initial+Site+Profile+-+" + Name</formula>
        <label>Initial Site Profile Merge</label>
        <type>Text</type>
    </fields>
</CustomObject>